Napisan uvodni deo za main.tex i uredjen dokument

--- a/Autorizacija/autorizacija.tex
+++ b/Autorizacija/autorizacija.tex
@@ -1,4 +1,4 @@
-\section*{Slučaj upotrebe: Autorizacija}
+\subsection{Slučaj upotrebe: Autorizacija}
 \label{uc:autorizacija}
 \vspace{10pt}
 
@@ -40,7 +40,6 @@
         \item Sistem odobrava pristup i preusmerava aktera na odgovarajuću početnu stranicu/kontrolnu tablu.
     \end{enumerate}
     
-    \newpage
     \item \textbf{Podtokovi:} /
     \vspace{5pt}
     
@@ -62,33 +61,32 @@
 \end{itemize}
 
 \newpage
-\subsection*{Dijagram aktivnosti}
 
-\begin{figure}[h!]
+\begin{figure}[H]
+\subsubsection*{Dijagram aktivnosti}
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Autorizacija/autorizacija_dijagram_aktivnosti.jpg}
+  \includegraphics[width=1.2\textwidth]{Autorizacija/autorizacija_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti naloga  za autorizaciju korisnika}
     \label{fig:aktivnost-autorizacija}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram sekvence}
-
-\begin{figure}[h!]
+\subsubsection*{Dijagram sekvence}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Autorizacija/autorizacija_dijagram_sekvence.jpg}
+  \includegraphics[width=1.2\textwidth]{Autorizacija/autorizacija_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence naloga  za autorizaciju korisnika}
     \label{fig:sekvenca-autorizacija}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram stanja Naloga}
+\subsubsection*{Dijagram stanja Naloga}
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
   \includegraphics[width=1\textwidth]{Autorizacija/dijagram_stanja_naloga.jpg}
