--- a/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
+++ b/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
@@ -1,5 +1,5 @@
 
-\section*{Slučaj upotrebe: Dodavanje novih zaposlenih}
+\subsection{Slučaj upotrebe: Dodavanje novih zaposlenih}
 \label{uc:dodavanje_zaposlenih}
 \vspace{10pt}
 
@@ -66,12 +66,11 @@
     \vspace{5pt}
 \end{itemize}
 
-\newpage
 \subsection*{Dijagram aktivnosti}
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagaram_aktivnosti.jpg}
+  \includegraphics[width=1.2\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagaram_aktivnosti.jpg}
 }
 \caption{Dijagram aktivnosti za dodavanje novog zaposlenog}
 \label{fig:aktivnost-radnici}
@@ -80,10 +79,10 @@
 \newpage
 \subsection*{Dijagram sekvence}
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagram_sekvence.jpg}
+  \includegraphics[width=1.2\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za dodavanje novog zaposlenog}
     \label{fig:sekvenca-radnici}
@@ -92,10 +91,10 @@
 \newpage
 \subsection*{BPMN Dijagram saradnje za dodavanje novog zaposlenog}
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_zaposlenog_bpmn_saradnje.jpg}
+  \includegraphics[width=1.2\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_zaposlenog_bpmn_saradnje.jpg}
 }
     \caption{BPMN Dijagram saradnje za dodavanje novog zaposlenog}
     \label{fig:bpmn}
