--- a/Izmena Repertoara/izmena_repertoara.tex
+++ b/Izmena Repertoara/izmena_repertoara.tex
@@ -1,4 +1,4 @@
-\section*{Slučaj upotrebe: Izmena repertoara}
+\subsection{Slučaj upotrebe: Izmena repertoara}
 \vspace{10pt}
 
 \begin{itemize}
@@ -69,46 +69,45 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
     \item \textbf{Dodatne informacije:} /
 \end{itemize}
 
-\newpage
 \subsection*{Dijagram aktivnosti}
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=0.74\textwidth]{Izmena Repertoara/izmena_repertoara_dijagram_aktivnosti.jpg}
+  \includegraphics[width=0.73\textwidth]{Izmena Repertoara/izmena_repertoara_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Izmena repertoara}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:aktivnost-izmena-repertoara}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram sekvence}
-\begin{figure}[h!]
+\subsubsection*{Dijagrami sekvence}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
   \includegraphics[width=1.2\textwidth]{Izmena Repertoara/izmena_repertoara_upravljanje_filmovima_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za upravljanje filmovima}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:sekvenca-upravljanje-filmovima}
 \end{figure}
 
 \newpage
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
   \includegraphics[width=1\textwidth]{Izmena Repertoara/izmena_repertoara_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za izmenu repertoara}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:sekvena-izmena-repertoara}
 \end{figure}
 
 \newpage
-\subsection*{BPMN dijagram}
-\begin{figure}[h!]
+\subsubsection*{BPMN dijagram}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.4\textwidth]{Izmena Repertoara/izmena_repertoara_bpmn_dijagram.jpg}
+  \includegraphics[width=1.3\textwidth]{Izmena Repertoara/izmena_repertoara_bpmn_dijagram.jpg}
 }
     \caption{BPMN dijagram slučaja upotrebe Izmena repertoara}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:bpmn-izmena-repertoara}
 \end{figure}
 
