--- a/Kupovina na blagajni/kupovina_na_blagajni.tex
+++ b/Kupovina na blagajni/kupovina_na_blagajni.tex
@@ -1,4 +1,4 @@
-\section*{Slučaj upotrebe: Kupovina na blagajni}
+\subsection{Slučaj upotrebe: Kupovina na blagajni}
 \label{uc:kupovina_na_blagajni}
 \vspace{10pt}
 
@@ -93,14 +93,16 @@
     \vspace{5pt}
 \end{itemize}
 
-\begin{figure}[h]
+\subsubsection*{Dijagram aktivnosti}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.9\textwidth]{Kupovina na blagajni/dijagram_aktivnosti_kupovina_na_blagajni.jpg}
+    \includegraphics[width=0.85\textwidth]{Kupovina na blagajni/dijagram_aktivnosti_kupovina_na_blagajni.jpg}
     \caption{Dijagram aktivnosti: Kupovina na blagajni}
     \label{fig:dijagram_aktivnosti_kupovina_na_blagajni}
 \end{figure}
 
-\begin{figure}[h]
+\subsubsection*{Dijagram sekvenci}
+\begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{Kupovina na blagajni/dijagram_sekvence_kupovina_na_blagajni.jpg}
     \caption{Dijagram sekvenci: Kupovina na blagajni}
