--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -1,4 +1,4 @@
-\section*{Slučaj upotrebe: Kupovina i registracija karte online}
+\subsection{Slučaj upotrebe: Kupovina i registracija karte online}
 \label{uc:online_kupovina_i_registracija}
 \vspace{10pt}
 
@@ -79,30 +79,34 @@
     \vspace{5pt}
 \end{itemize}
 
-\begin{figure}[h]
+\subsubsection*{Dijagram aktivnosti}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{Online kupovina i rezervacija/dijagram_aktivnosti_online_kupovina.jpg}
+    \includegraphics[width=0.95\textwidth]{Online kupovina i rezervacija/dijagram_aktivnosti_online_kupovina.jpg}
     \caption{Dijagram aktivnosti: Online kupovina i registracija karte}
     \label{fig:dijagram_aktivnosti_online_kupovina}
 \end{figure}
 
-\begin{figure}[h]
+\subsubsection*{Dijagram sekvence}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{Online kupovina i rezervacija/dijagram_sekvence_online_kupovina.jpg}
     \caption{Dijagram sekvence: Online kupovina i registracija karte}
     \label{fig:dijagram_sekvence_online_kupovina}
 \end{figure}
 
-\begin{figure}
+\subsubsection*{Dijagram stanja sedišta}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.6\textwidth]{Online kupovina i rezervacija/dijagram_stanja_sedista.jpg}
+    \includegraphics[width=1\textwidth]{Online kupovina i rezervacija/dijagram_stanja_sedista.jpg}
     \caption{Dijagram stanja sedišta}
     \label{fig:dijagram_stanja_sedista}
 \end{figure}
 
-\begin{figure}
+\subsubsection*{BPMN dijagram procesa}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{Online kupovina i rezervacija/bpmn_dijagram_procesa_online_kupovina.jpg}
+    \includegraphics[width=1\textwidth]{Online kupovina i rezervacija/bpmn_dijagram_procesa_online_kupovina.jpg}
     \caption{BPMN dijagram procesa: Online kupovina i registracija karte}
     \label{fig:dijagram_koriscenja_online_kupovina}
 \end{figure}
