--- a/Registracija/registracija.tex
+++ b/Registracija/registracija.tex
@@ -1,4 +1,4 @@
-\section*{Slučaj upotrebe: Registracija}
+\subsection{Slučaj upotrebe: Registracija}
 \label{uc:registracija}
 \vspace{10pt}
 
@@ -40,7 +40,6 @@
         \item Sistem obaveštava korisnika o uspešnoj registraciji i aktivaciji.
     \end{enumerate}
 
-    \newpage
     \item \textbf{Podtokovi:} /
     \vspace{5pt}
     
@@ -64,35 +63,33 @@
 \end{itemize}
 
 \newpage
-\subsection*{Dijagram aktivnosti}
-\begin{figure}[h!]
+\subsubsection*{Dijagram aktivnosti}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Registracija/registracija_dijagram_aktivnosti.jpg}
+  \includegraphics[width=1.2\textwidth]{Registracija/registracija_dijagram_aktivnosti.jpg}
 }
 \caption{Dijagram aktivnosti za registraciju korisnika}
 \label{fig:aktivnost-registracija}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram sekvence}
-
-\begin{figure}[h!]
+\subsubsection*{Dijagram sekvence}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Registracija/registracija_dijagram_sekvence.jpg}
+  \includegraphics[width=1.2\textwidth]{Registracija/registracija_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za registraciju korisnika}
     \label{fig:sekvenca-registracija}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram stanja Naloga}
-
-\begin{figure}[h!]
+\subsubsection*{Dijagram stanja Naloga}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=0.7\textwidth]{Registracija/dijagram_stanja_naloga.jpg}
+  \includegraphics[width=0.5\textwidth]{Registracija/dijagram_stanja_naloga.jpg}
 }
     \caption{Dijagram stanja naloga}
     \label{fig:stanje-registracija}
