--- a/Upravljanje Podacima/upravljanje_podacima.tex
+++ b/Upravljanje Podacima/upravljanje_podacima.tex
@@ -1,5 +1,5 @@
 
-\section*{Slučaj upotrebe: Upravljanje podacima}
+\subsection{Slučaj upotrebe: Upravljanje podacima}
 \vspace{10pt}
 
 \begin{itemize}
@@ -39,37 +39,35 @@
 \end{itemize}
 
 \newpage
-\subsection*{Dijagram aktivnosti}
+\subsubsection*{Dijagram aktivnosti}
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_aktivnosti.jpg}
+  \includegraphics[width=1.3\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Upravljanje podacima}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:aktivnost-upravljanje-podacima}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram sekvence}
-
-\begin{figure}[h!]
+\subsubsection*{Dijagram sekvence}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_sekvence.jpg}
+  \includegraphics[width=1.2\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence slučaja upotrebe Upravljanje podacima}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:sekvenca-upravljanje-podacima}
 \end{figure}
 
 \newpage
-\subsection*{Dijagram stanja}
-
-\begin{figure}[h!]
+\subsubsection*{Dijagram stanja filma}
+\begin{figure}[H]
 \centering
 \makebox[\textwidth][c]{%
   \includegraphics[width=1\textwidth]{Upravljanje Podacima/dijagram_stanja_filma.jpg}
 }
     \caption{Dijagram stanja filma}
-    \label{fig:aktivnost-autorizacija}
+    \label{fig:stanje-filma}
 \end{figure}
