Dodat dijagram komponenti

--- a/main.tex
+++ b/main.tex
@@ -282,10 +282,18 @@ stanje & StanjeSedišta & Trenutni status (Slobodno, Zauzeto, itd.). \\ \hline
 \begin{figure}[h!]
     \centering
     \makebox[\textwidth][c]{
-        \includegraphics[width=1.5\textwidth]{dijagram_klasa.jpg}
+        \includegraphics[width=1.0\textwidth]{dijagram_klasa.jpg}
     }
     \caption{Dijagram klasa}
     \label{fig:dijagram_klasa}
+\end{figure}
+
+\section{Arhitektura sistema}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\textwidth]{dijagram_komponenti.jpg}
+    \caption{Dijagram komponenti}
+    \label{fig:dijagram_komponenti}
 \end{figure}
 
 \end{document}
