Dodate slike korisnickog interfjesa i azurirana main.pdf

--- a/main.tex
+++ b/main.tex
@@ -333,5 +333,56 @@ Na slici \ref{fig:dijagram_komponenti} nalazi se predlog arhitekture sistema pri
     \label{fig:dijagram_isporucivanja}
 \end{figure}
 
+\newpage
+\section {Korisnički interfejs}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/pocetna_strana.png}
+    \caption{Početna stranica}
+    \label{fig:pocetna_strana}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/prijava.png}
+    \caption{Prijava}
+    \label{fig:prijava}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/repertoar_filmova.png}
+    \caption{Repertoar filmova}
+    \label{fig:repertoar_filmova}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/prikaz_termina_projekcije.png}
+    \caption{Izbor termina projekcije}
+    \label{fig:prikaz_termina_projekcije}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/biranje_sedista.png}
+    \caption{Biranje sedista}
+    \label{fig:biranje_sedista}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/kupovina_karte.png}
+    \caption{Kupovina karte}
+    \label{fig:kupovina_karte}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.88\textwidth]{gui/potvrda_o_kupovini.png}
+    \caption{Potvrda o kupovini}
+    \label{fig:potvrda_o_kupovini}
+\end{figure}
 
 \end{document}
